[gd_scene load_steps=28 format=1]

[ext_resource path="res://scripts/Mapas/CasaVelha.gd" type="Script" id=1]
[ext_resource path="res://tilesets/tilesetHousesOutside.tres" type="TileSet" id=2]
[ext_resource path="res://tilesets/tilesetIndoors.tres" type="TileSet" id=3]
[ext_resource path="res://scenes/Personagem/Personagem.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Mapas/pipo-popupemotes Split images/pipo-popupemotes059.png" type="Texture" id=5]
[ext_resource path="res://scenes/Npc/npc.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Personagens/$Lanto (14).png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 57.9595, 3.00031 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 189.984, 91.3486 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 252.994, 94.2905 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 508.087, 64.0726 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 194.002, 68.1404 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 157.24, 68.6585 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 35.2634, 69.5888 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 28.2998, 389.23 )

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 31.0301, 180.33 )

[sub_resource type="SegmentShape2D" id=10]

custom_solver_bias = 0.0
a = Vector2( 85.7165, 10.6553 )
b = Vector2( 0, 10 )

[sub_resource type="SegmentShape2D" id=11]

custom_solver_bias = 0.0
a = Vector2( 42.4891, 10.2159 )
b = Vector2( 0, 10 )

[sub_resource type="SegmentShape2D" id=12]

custom_solver_bias = 0.0
a = Vector2( 47.9466, 9.79825 )
b = Vector2( 0, 10 )

[sub_resource type="SegmentShape2D" id=13]

custom_solver_bias = 0.0
a = Vector2( 62.9548, 10.3329 )
b = Vector2( 0, 10 )

[sub_resource type="SegmentShape2D" id=14]

custom_solver_bias = 0.0
a = Vector2( 66.7108, 10.2479 )
b = Vector2( 0, 10 )

[sub_resource type="SegmentShape2D" id=15]

custom_solver_bias = 0.0
a = Vector2( 115.176, 10.9693 )
b = Vector2( 0, 10 )

[sub_resource type="SegmentShape2D" id=16]

custom_solver_bias = 0.0
a = Vector2( 47.1573, 9.5497 )
b = Vector2( 0, 10 )

[sub_resource type="CircleShape2D" id=17]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="Animation" id=18]

resource/name = "Nova Animação"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="CircleShape2D" id=19]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="RectangleShape2D" id=20]

custom_solver_bias = 0.0
extents = Vector2( 18.82, 24.2729 )

[node name="CasaVelha" type="Node2D"]

transform/rot = 270.0
script/script = ExtResource( 1 )

[node name="Chao" type="TileMap" parent="."]

transform/scale = Vector2( 4, 4 )
mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 65535, 536871096, 0, 536871096, 1, 536871096, 2, 536871096, 3, 536871096, 4, 536871096, 5, 536871096, 6, 536871096, 7, 536871096, 8, 536871096, 9, 536871096, 10, 536871096, 11, 536871096, 12, 536871096, 131071, 536871096, 65536, 536871096, 65537, 536871096, 65538, 536871096, 65539, 536871096, 65540, 536871096, 65541, 536871096, 65542, 536871096, 65543, 536871096, 65544, 536871096, 65545, 536871096, 65546, 536871096, 65547, 536871096, 65548, 536871096, 196607, 536871096, 131072, 536871096, 131073, 536871096, 131074, 536871096, 131075, 536871096, 131076, 536871096, 131077, 536871096, 131078, 536871096, 131079, 536871096, 131080, 536871096, 131081, 536871096, 131082, 536871096, 131083, 536871096, 131084, 536871096, 262143, 536871096, 196608, 536871096, 196609, 536871096, 196610, 536871096, 196611, 536871096, 196612, 536871096, 196613, 536871096, 196614, 536871096, 196615, 536871096, 196616, 536871096, 196617, 536871096, 196618, 536871096, 196619, 536871096, 196620, 536871096, 327679, 536871096, 262144, 536871096, 262145, 536871096, 262146, 536871096, 262147, 536871096, 262148, 536871096, 262149, 536871096, 262150, 536871096, 262151, 536871096, 262152, 536871096, 262153, 536871096, 262154, 536871096, 262155, 536871096, 262156, 536871096, 393215, 536871096, 327680, 536871096, 327681, 536871096, 327682, 536871096, 327683, 536871096, 327684, 536871096, 327685, 536871096, 327686, 536871096, 327687, 536871096, 327688, 536871096, 327689, 536871096, 327690, 536871096, 327691, 536871096, 327692, 536871096, 458751, 536871096, 393216, 536871096, 393217, 536871096, 393218, 536871096, 393219, 536871096, 393220, 536871096, 393221, 536871096, 393222, 536871096, 393223, 536871096, 393224, 536871096, 393225, 536871096, 393226, 536871096, 393227, 536871096, 393228, 536871096, 524287, 536871096, 458752, 536871096, 458753, 536871096, 458754, 536871096, 458755, 536871096, 458756, 536871096, 458757, 536871096, 458758, 536871096, 458759, 536871096, 458760, 536871096, 458761, 536871096, 458762, 536871096, 458763, 536871096, 458764, 536871096, 589823, 536871096, 524288, 536871096, 524289, 536871096, 524290, 536871096, 524291, 536871096, 524292, 536871096, 524293, 536871096, 524294, 536871096, 524295, 536871096, 524296, 536871096, 524297, 536871096, 524298, 536871096, 524299, 536871096, 524300, 536871096, 655359, 536871096, 589824, 536871096, 589825, 536871096, 589826, 536871096, 589827, 536871096, 589828, 536871096, 589829, 536871096, 589830, 536871096, 589831, 536871096, 589832, 536871096, 589833, 536871096, 589834, 536871096, 589835, 536871096, 589836, 536871096, 655364, 536871096, 655365, 536871096, 720900, 536871096, 720901, 536871096, 786436, 536871096, 786437, 536871096 )
__meta__ = {
"_edit_lock_": true
}

[node name="Paredes" type="TileMap" parent="."]

transform/scale = Vector2( 4, 4 )
mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -65538, 52, -65537, 50, -131072, 50, -131071, 50, -131070, 50, -131069, 50, -131068, 50, -131067, 49, -131066, 50, -131065, 50, -131064, 50, -131063, 50, -131062, 50, -131061, 50, -131060, 50, -131059, 53, -2, 45, -1, 36, -65536, 410, -65535, 36, -65534, 36, -65533, 36, -65532, 36, -65531, 45, -65530, 36, -65529, 411, -65528, 36, -65527, 36, -65526, 36, -65525, 36, -65524, 36, -65523, 45, 65534, 45, 65535, 4, 0, 4, 1, 4, 2, 4, 3, 4, 4, 4, 5, 45, 6, 4, 7, 4, 8, 4, 9, 4, 10, 4, 11, 536871324, 12, 4, 13, 45, 131070, 45, 65541, 45, 65549, 45, 196606, 45, 131077, 45, 131085, 45, 262142, 45, 196613, 45, 196621, 45, 327678, 54, 327679, 51, 262145, 1, 262146, 50, 262147, 50, 262148, 50, 262149, 47, 262151, 1, 262152, 50, 262153, 50, 262154, 50, 262155, 50, 262156, 50, 262157, 48, 393214, 45, 393215, 37, 327681, 35, 327682, 410, 327683, 36, 327684, 36, 327685, 37, 327687, 35, 327688, 36, 327689, 36, 327690, 36, 327691, 536871322, 327692, 36, 327693, 45, 458750, 45, 458751, 34, 393217, 32, 393218, 4, 393219, 4, 393220, 412, 393221, 34, 393223, 32, 393224, 536871324, 393225, 4, 393226, 4, 393227, 4, 393228, 4, 393229, 45, 524286, 45, 458765, 45, 589822, 45, 524301, 45, 655358, 45, 589837, 45, 720894, 46, 720895, 50, 655360, 50, 655361, 50, 655362, 50, 655363, 536870913, 655366, 1, 655367, 50, 655368, 50, 655369, 50, 655370, 50, 655371, 50, 655372, 50, 655373, 47, 786430, 35, 786431, 36, 720896, 536871322, 720897, 36, 720898, 36, 720899, 37, 720902, 35, 720903, 36, 720904, 410, 720905, 36, 720906, 411, 720907, 36, 720908, 36, 720909, 536870947, 851966, 32, 851967, 4, 786432, 4, 786433, 4, 786434, 536870916, 786435, 413, 786438, 32, 786439, 4, 786440, 4, 786441, 4, 786442, 4, 786443, 4, 786444, 4, 786445, 34 )
__meta__ = {
"_edit_lock_": true
}

[node name="Moveis" type="TileMap" parent="."]

transform/scale = Vector2( 4, 4 )
mode = 0
tile_set = ExtResource( 3 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )
__meta__ = {
"_edit_lock_": true
}

[node name="MoveisMedioY" type="TileMap" parent="."]

transform/pos = Vector2( 0, 32 )
transform/scale = Vector2( 6, 6 )
mode = 0
tile_set = ExtResource( 3 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -65530, 125, -65529, 117, 1, 33, 4, 113, 5, 112, 196610, 24, 262145, 46, 262147, 149, 262149, 155, 262150, 151, 262151, 156 )
__meta__ = {
"_edit_lock_": true
}

[node name="MoveisMedioXY" type="TileMap" parent="."]

transform/pos = Vector2( 32, 32 )
transform/scale = Vector2( 6, 6 )
mode = 0
tile_set = ExtResource( 3 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 65535, 19, 2, 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="MoveisGrandes" type="TileMap" parent="."]

transform/scale = Vector2( 8, 8 )
mode = 0
tile_set = ExtResource( 3 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 5, 143 )
__meta__ = {
"_edit_lock_": true
}

[node name="personagem" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 326.264, 747.611 )

[node name="Door" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 323.986, 789.46 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -5.98737, 37.1217 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]

transform/pos = Vector2( -5.98737, 37.1217 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Colisoes" type="Node2D" parent="."]

[node name="Paredes" type="StaticBody2D" parent="Colisoes"]

transform/pos = Vector2( 418.24, 412.688 )
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -355.856, 320.983 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 3 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 222.221, 324.123 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 4 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, -32.6761, -472.19 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 5 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 228.255, -87.3549 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 6 )
shapes/4/transform = Matrix32( 1, 0, 0, 1, -194.123, -85.4157 )
shapes/4/trigger = false
shapes/5/shape = SubResource( 7 )
shapes/5/transform = Matrix32( 1, 0, 0, 1, -454.94, -86.5356 )
shapes/5/trigger = false
shapes/6/shape = SubResource( 8 )
shapes/6/transform = Matrix32( 1, 0, 0, 1, -514.505, -133.001 )
shapes/6/trigger = false
shapes/7/shape = SubResource( 8 )
shapes/7/transform = Matrix32( 1, 0, 0, 1, 446.062, -132.187 )
shapes/7/trigger = false
shapes/8/shape = SubResource( 9 )
shapes/8/transform = Matrix32( 1, 0, 0, 1, -67.9116, -326.427 )
shapes/8/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisoes/Paredes"]

transform/pos = Vector2( -355.856, 320.983 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="Colisoes/Paredes"]

transform/pos = Vector2( 222.221, 324.123 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 1

[node name="CollisionShape2D 3" type="CollisionShape2D" parent="Colisoes/Paredes"]

transform/pos = Vector2( -32.6761, -472.19 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 2

[node name="CollisionShape2D 4" type="CollisionShape2D" parent="Colisoes/Paredes"]

transform/pos = Vector2( 228.255, -87.3549 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 3

[node name="CollisionShape2D 5" type="CollisionShape2D" parent="Colisoes/Paredes"]

transform/pos = Vector2( -194.123, -85.4157 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 4

[node name="CollisionShape2D 6" type="CollisionShape2D" parent="Colisoes/Paredes"]

transform/pos = Vector2( -454.94, -86.5356 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 5

[node name="CollisionShape2D 7" type="CollisionShape2D" parent="Colisoes/Paredes"]

transform/pos = Vector2( -514.505, -133.001 )
shape = SubResource( 8 )
trigger = false
_update_shape_index = 6

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Colisoes/Paredes"]

transform/pos = Vector2( 446.062, -132.187 )
shape = SubResource( 8 )
trigger = false
_update_shape_index = 7

[node name="CollisionShape2D 8" type="CollisionShape2D" parent="Colisoes/Paredes"]

transform/pos = Vector2( -67.9116, -326.427 )
shape = SubResource( 9 )
trigger = false
_update_shape_index = 8

[node name="Moveis" type="StaticBody2D" parent="Colisoes"]

transform/pos = Vector2( 986.381, 553.336 )
input/pickable = false
shapes/0/shape = SubResource( 10 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -309.633, -116.997 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 11 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, -482.729, -118.069 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 11 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, -386.372, -118.069 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 12 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, -866.253, -123.523 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 13 )
shapes/4/transform = Matrix32( 1, 0, 0, 1, -685.288, -129.674 )
shapes/4/trigger = false
shapes/5/shape = SubResource( 14 )
shapes/5/transform = Matrix32( 1, 0, 0, 1, -1036.53, -508.163 )
shapes/5/trigger = false
shapes/6/shape = SubResource( 14 )
shapes/6/transform = Matrix32( 1, 0, 0, 1, -749.821, -508.163 )
shapes/6/trigger = false
shapes/7/shape = SubResource( 15 )
shapes/7/transform = Matrix32( 1, 0, 0, 1, -333.945, -531.611 )
shapes/7/trigger = false
shapes/8/shape = SubResource( 16 )
shapes/8/transform = Matrix32( 1, 0, 0, 1, -487.653, -506.195 )
shapes/8/trigger = false
shapes/9/shape = SubResource( 16 )
shapes/9/transform = Matrix32( 1, 0, 0, 1, -582.136, -506.195 )
shapes/9/trigger = false
shapes/10/shape = SubResource( 16 )
shapes/10/transform = Matrix32( 1, 0, 0, 1, -865.585, -499.679 )
shapes/10/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisoes/Moveis"]

transform/pos = Vector2( -309.633, -116.997 )
shape = SubResource( 10 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="Colisoes/Moveis"]

transform/pos = Vector2( -482.729, -118.069 )
shape = SubResource( 11 )
trigger = false
_update_shape_index = 1

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Colisoes/Moveis"]

transform/pos = Vector2( -386.372, -118.069 )
shape = SubResource( 11 )
trigger = false
_update_shape_index = 2

[node name="CollisionShape2D 3" type="CollisionShape2D" parent="Colisoes/Moveis"]

transform/pos = Vector2( -866.253, -123.523 )
shape = SubResource( 12 )
trigger = false
_update_shape_index = 3

[node name="CollisionShape2D 4" type="CollisionShape2D" parent="Colisoes/Moveis"]

transform/pos = Vector2( -685.288, -129.674 )
shape = SubResource( 13 )
trigger = false
_update_shape_index = 4

[node name="CollisionShape2D 5" type="CollisionShape2D" parent="Colisoes/Moveis"]

transform/pos = Vector2( -1036.53, -508.163 )
shape = SubResource( 14 )
trigger = false
_update_shape_index = 5

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Colisoes/Moveis"]

transform/pos = Vector2( -749.821, -508.163 )
shape = SubResource( 14 )
trigger = false
_update_shape_index = 6

[node name="CollisionShape2D 6" type="CollisionShape2D" parent="Colisoes/Moveis"]

transform/pos = Vector2( -333.945, -531.611 )
shape = SubResource( 15 )
trigger = false
_update_shape_index = 7

[node name="CollisionShape2D 7" type="CollisionShape2D" parent="Colisoes/Moveis"]

transform/pos = Vector2( -487.653, -506.195 )
shape = SubResource( 16 )
trigger = false
_update_shape_index = 8

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Colisoes/Moveis"]

transform/pos = Vector2( -582.136, -506.195 )
shape = SubResource( 16 )
trigger = false
_update_shape_index = 9

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Colisoes/Moveis"]

transform/pos = Vector2( -865.585, -499.679 )
shape = SubResource( 16 )
trigger = false
_update_shape_index = 10

[node name="BotaoPacMan" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 144.2, 46.2528 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="BotaoPacMan"]

transform/scale = Vector2( 4, 4 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 17 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Sprite" type="Sprite" parent="BotaoPacMan"]

transform/pos = Vector2( 4.36935, 0.397217 )
transform/scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 5 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="BotaoPacMan"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/Nova Animação" = SubResource( 18 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Nova Animação"

[node name="AreaBotao" type="Area2D" parent="BotaoPacMan"]

input/pickable = true
shapes/0/shape = SubResource( 19 )
shapes/0/transform = Matrix32( 5, 0, 0, 5, -0.00012207, 58.7259 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BotaoPacMan/AreaBotao"]

transform/pos = Vector2( -0.00012207, 58.7259 )
transform/scale = Vector2( 5, 5 )
shape = SubResource( 19 )
trigger = false
_update_shape_index = 0

[node name="velho" parent="." instance=ExtResource( 6 )]

transform/pos = Vector2( 538.375, 94.8433 )

[node name="Sprite" type="Sprite" parent="velho"]

transform/pos = Vector2( -2.4675, 4.93498 )
transform/scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 7 )
region = true
region_rect = Rect2( 34, 0, 29, 32 )

[node name="StaticBody2D" type="StaticBody2D" parent="velho"]

input/pickable = false
shapes/0/shape = SubResource( 20 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -3.22757, 4.9881 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="velho/StaticBody2D"]

transform/pos = Vector2( -3.22757, 4.9881 )
shape = SubResource( 20 )
trigger = false
_update_shape_index = 0

[connection signal="body_enter" from="Door" to="." method="_on_Door_body_enter"]

[connection signal="pressed" from="BotaoPacMan/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]

[connection signal="body_enter" from="BotaoPacMan/AreaBotao" to="." method="_on_AreaBotao_body_enter"]

[connection signal="body_exit" from="BotaoPacMan/AreaBotao" to="." method="_on_AreaBotao_body_exit"]

[connection signal="body_enter" from="velho" to="." method="_on_velho_body_enter"]


